crates/math-core/tests/snapshots/error_test__sqrt_unknown_cmd.snap
---
source: crates/math-core/tests/error_test.rs
expression: "\\sqrt[3]\\asdf 3"
---
Position: 8, width: 5
UnknownCommand(
    "asdf",
)
