crates/math-core/tests/snapshots/error_test__sub_sup_sub.snap
---
source: crates/math-core/tests/error_test.rs
expression: x_2^4_3 y
---
Error: Duplicate subscript or superscript.
   ╭─[ <input>:1:6 ]
   │
 1 │ x_2^4_3 y
   │      ┬  
   │      ╰── duplicate
───╯
