crates/math-core/tests/snapshots/error_test__sup_closed.snap
---
source: crates/math-core/tests/error_test.rs
expression: "{x^}"
---
Position: 3, width: 1
ExpectedArgumentGotClose
