crates/math-core/tests/snapshots/error_test__super_then_prime.snap
---
source: crates/math-core/tests/error_test.rs
expression: "f^2'"
---
Position: 3..4
DuplicateSubOrSup
